--- a/theme/partials/header.html
+++ b/theme/partials/header.html
@@ -1,5 +1,11 @@
 <!-- Additional styles for landing page -->
 <style>
+  [dir=ltr] .md-header__title  {
+    margin-left: 0;
+  }
+  .md-ellipsis {
+    font-weight: 400;
+  }
   .gradient-container {
     height: 49px;
     top: 0;
@@ -118,56 +124,145 @@
     <span></span>
   </div>
 </div>
-<!-- Application header -->
-<header class="md-header" data-md-component="header">
-  <!-- Top-level navigation -->
-  <nav class="md-header-nav md-grid" aria-label="{{ lang.t('header.title') }}">
+<!-- Determine class according to configuration -->
+{% set class = "md-header" %}
+{% if "navigation.tabs.sticky" in features %}
+  {% set class = class ~ " md-header--lifted" %}
+{% endif %}
+
+<!-- Header -->
+<header class="{{ class }}" data-md-component="header">
+  <nav
+    class="md-header__inner md-grid"
+    aria-label="{{ lang.t('header.title') }}"
+  >
+
     <!-- Link to home -->
     <a
-      href="{{ config.site_url | default(nav.homepage.url, true) | url }}"
-      title="{{ config.site_name }}"
-      class="md-header-nav__button md-logo"
+      href="{{ config.extra.homepage | d(nav.homepage.url, true) | url }}"
+      title="{{ config.site_name | e }}"
+      class="md-header__button md-logo"
       aria-label="{{ config.site_name }}"
+      data-md-component="logo"
     >
       {% include "partials/logo.html" %}
     </a>
 
     <!-- Button to open drawer -->
-    <label class="md-header-nav__button md-icon" for="__drawer">
+    <label class="md-header__button md-icon" for="__drawer">
       {% include ".icons/material/menu" ~ ".svg" %}
     </label>
 
     <!-- Header title -->
-    <div class="md-header-nav__title" data-md-component="header-title">
-      {% if config.site_name == page.title %}
-      <div class="md-header-nav__ellipsis md-ellipsis">
-        {{ config.site_name }}
+    <div class="md-header__title" data-md-component="header-title">
+      <div class="md-header__ellipsis">
+        <div class="md-header__topic">
+          <span class="md-ellipsis">
+            {{ config.site_name }}
+          </span>
+        </div>
+        <div class="md-header__topic" data-md-component="header-topic">
+          <span class="md-ellipsis">
+            {% if page.meta and page.meta.title %}
+              {{ page.meta.title }}
+            {% else %}
+              {{ page.title }}
+            {% endif %}
+          </span>
+        </div>
       </div>
-      {% else %}
-      <div class="md-header-nav__ellipsis">
-        <span class="md-ellipsis">
-          {{ config.site_name }}
-        </span>
-      </div>
-      {% endif %}
     </div>
 
-    <!-- Button to open search dialogue -->
-    {% if "search" in config["plugins"] %}
-    <label class="md-header-nav__button md-icon" for="__search">
-      {% include ".icons/material/magnify.svg" %}
-    </label>
+    <!-- Color palette -->
+    {% if not config.theme.palette is mapping %}
+      <form class="md-header__option" data-md-component="palette">
+        {% for option in config.theme.palette %}
+          {% set scheme  = option.scheme | d("default", true) %}
+          {% set primary = option.primary %}
+          {% set accent  = option.accent %}
+          <input
+            class="md-option"
+            data-md-color-media="{{ option.media }}"
+            data-md-color-scheme="{{ scheme | replace(' ', '-') }}"
+            data-md-color-primary="{{ primary | replace(' ', '-') }}"
+            data-md-color-accent="{{ accent | replace(' ', '-') }}"
+            {% if option.toggle %}
+              aria-label="{{ option.toggle.name }}"
+            {% else  %}
+              aria-hidden="true"
+            {% endif %}
+            type="radio"
+            name="__palette"
+            id="__palette_{{ loop.index }}"
+          />
+          {% if option.toggle %}
+            <label
+              class="md-header__button md-icon"
+              title="{{ option.toggle.name }}"
+              for="__palette_{{ loop.index0 or loop.length }}"
+              hidden
+            >
+              {% include ".icons/" ~ option.toggle.icon ~ ".svg" %}
+            </label>
+          {% endif %}
+        {% endfor %}
+      </form>
+    {% endif %}
 
-    <!-- Search interface -->
-    {% include "partials/search.html" %} {% endif %}
+    <!-- Site language selector -->
+    {% if config.extra.alternate %}
+      <div class="md-header__option"></form>
+        <div class="md-select">
+          {% set icon = config.theme.icon.alternate or "material/translate" %}
+          <button
+            class="md-header__button md-icon"
+            aria-label="{{ lang.t('select.language.title') }}"
+          >
+            {% include ".icons/" ~ icon ~ ".svg" %}
+          </button>
+          <div class="md-select__inner">
+            <ul class="md-select__list">
+              {% for alt in config.extra.alternate %}
+                <li class="md-select__item">
+                  <a
+                    href="{{ alt.link | url }}"
+                    hreflang="{{ alt.lang }}"
+                    class="md-select__link"
+                  >
+                    {{ alt.name }}
+                  </a>
+                </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+      </div>
+    {% endif %}
 
-    <!-- Repository containing source -->
+    <!-- Button to open search modal -->
+    {% if "search" in config.plugins %}
+      <label class="md-header__button md-icon" for="__search">
+        {% include ".icons/material/magnify.svg" %}
+      </label>
+
+      <!-- Search interface -->
+      {% include "partials/search.html" %}
+    {% endif %}
+
+    <!-- Repository information -->
     {% if config.repo_url %}
-    <div class="md-header-nav__source">
-      {% include "partials/source.html" %}
-    </div>
+      <div class="md-header__source">
+        {% include "partials/source.html" %}
+      </div>
     {% endif %}
   </nav>
+
+  <!-- Navigation tabs (sticky) -->
+  {% if "navigation.tabs.sticky" in features %}
+    {% if "navigation.tabs" in features %}
+      {% include "partials/tabs.html" %}
+    {% endif %}
+  {% endif %}
 </header>
 <div class="gradient-container gradient-container-offset">
   <div class="gradients">
