--- a/theme/partials/copyright.html
+++ b/theme/partials/copyright.html
@@ -2,7 +2,7 @@
 <div class="md-copyright">
   {% if config.copyright %}
   <div class="md-footer-copyright__highlight">
-    <a href="https://matrado.ca" target="_blank" rel="noopener"
+    <a href="https://iterating.ca" target="_blank" rel="noopener"
       >epanet-js created by {{ config.copyright }}</a
     >
   </div>
