--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -34,9 +34,9 @@ const { page } = Astro.props;
 <Layout title="Blog">
   <Container>
     <Sectionhead>
-      <Fragment slot="title">Our Blog</Fragment>
+      <Fragment slot="title">epanet-js Blog</Fragment>
       <Fragment slot="desc">
-        We write about building startups and thoughts going on our mind.
+        We write about the intersection at water industry and software.
       </Fragment>
     </Sectionhead>
     <main class="mt-16">
