--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -139,13 +139,21 @@ figcaption {
   margin: 1em auto;
 }
 
-/*
-.astronav-sticky-header {
-  --tw-backdrop-blur: blur(16px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-  background-color: rgb(255 255 255 / 0.8);
-    --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+.prose :where(code):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
+  padding: 0 .25em;
+  border-radius: .125rem;
+  background-color: #f5f5f5;
+  font-weight: normal;
+  font-variant-ligatures: none;
+  font-feature-settings: "kern";
+  word-break: break-word;
 }
-  */
+
+.prose :where(code):not(:where([class~="not-prose"], [class~="not-prose"] *))::before,
+.prose :where(code):not(:where([class~="not-prose"], [class~="not-prose"] *))::after {
+  display: none;
+}
+
+.prose-lg :where(img):not(:where([class~="not-prose"],[class~="not-prose"] *)) {
+  margin-bottom: 0;
+}
