Posts: minor fixes

--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -50,7 +50,7 @@ const { page } = Astro.props;
         We write about the intersection at water industry and software.
       </Fragment>
     </Sectionhead>
-    <main class="mt-16">
+    <main class="mt-16 mb-4">
       <ul class="grid gap-16 max-w-4xl mx-auto">
         {
           page.data.map((post, index) => (
